--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "recharts": "^1.8.5"
   },
   "devDependencies": {
+    "csvtojson": "^2.0.10",
     "dotenv-webpack": "^1.8.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
